grammars/qbasic/grammar.js
    program: $ => repeat(choice(
      $.block_if_statement,
      $.select_case_statement,
      $.do_statement,
      $.sub_definition,
      $.function_definition,
      $.type_definition,
      $.metacommand,
      $.line,
      /\r?\n/,
    )),

    // Spread common rules (minus program which we already defined above)
    ...commonRulesNoProgram,

    // Override integer_literal with lower token precedence to avoid
    // conflicting with line_number (which has prec(1))
    integer_literal: $ => token(prec(-1, /\d+/)),

    // Override identifier with lower token precedence so keywords win
    identifier: $ => token(prec(-2, /[a-zA-Z][a-zA-Z0-9]*/)),

    // Override variable to support member access (p.X, rec.field)
    variable: $ => seq(
      $.identifier,
      optional($.type_sigil),
      optional(choice(
        seq("(", commaSep1($.expression), ")"),
        seq(".", $.identifier),
      ))
    ),

    // QBasic: line numbers OPTIONAL, labels supported
    // Label-only lines are valid (no statement required after label)
    line: $ => choice(
      // Line with content (optional label/line_number + required statement_list)
      seq(optional(choice($.line_number, $.label)), $.statement_list, /\r?\n/),
      // Label-only line (no statement)
      seq(choice($.line_number, $.label), /\r?\n/),
    ),

    label: $ => seq($.identifier, ":"),

    // Override statement_list to allow apostrophe comments without colon separator
    statement_list: $ => seq(
      $.statement,
      repeat(seq(":", $.statement)),
      optional($.apostrophe_comment),
    ),

    // ====== Block IF/THEN/ELSEIF/ELSE/END IF ======
    block_if_statement: $ => seq(
      kw("IF"), $.expression, kw("THEN"), /\r?\n/,
      blockBody($),
      repeat($.elseif_clause),
      optional($.else_clause),
      kw("END"), kw("IF"), /\r?\n/,
    ),

    elseif_clause: $ => seq(
      kw("ELSEIF"), $.expression, kw("THEN"), /\r?\n/,
      blockBody($),
    ),

    else_clause: $ => seq(
      kw("ELSE"), /\r?\n/,
      blockBody($),
    ),

    // ====== SELECT CASE ======
    select_case_statement: $ => seq(
      kw("SELECT"), kw("CASE"), $.expression, /\r?\n/,
      repeat($.case_clause),
      optional($.case_else_clause),
      kw("END"), kw("SELECT"), /\r?\n/,
    ),

    case_clause: $ => seq(
      kw("CASE"), commaSep1($.case_specifier), /\r?\n/,
      blockBody($),
    ),

    case_else_clause: $ => seq(
      kw("CASE"), kw("ELSE"), /\r?\n/,
      blockBody($),
    ),

    case_specifier: $ => choice(
      seq(kw("IS"), choice("<", ">", "<=", ">=", "=", "<>"), $.expression),
      seq($.expression, kw("TO"), $.expression),
      $.expression,
    ),

    // ====== DO/LOOP ======
    do_statement: $ => choice(
      // DO WHILE/UNTIL ... LOOP
      seq(kw("DO"), choice(kw("WHILE"), kw("UNTIL")), $.expression, /\r?\n/,
        blockBody($),
        kw("LOOP"), /\r?\n/),
      // DO ... LOOP WHILE/UNTIL
      seq(kw("DO"), /\r?\n/,
        blockBody($),
        kw("LOOP"), choice(kw("WHILE"), kw("UNTIL")), $.expression, /\r?\n/),
      // DO ... LOOP (infinite)
      seq(kw("DO"), /\r?\n/,
        blockBody($),
        kw("LOOP"), /\r?\n/),
    ),

    // ====== SUB/FUNCTION definitions ======
    sub_definition: $ => seq(
      kw("SUB"), field("name", $.identifier), optional($.parameter_list), optional(kw("STATIC")), /\r?\n/,
      blockBody($),
      kw("END"), kw("SUB"), /\r?\n/,
    ),

    function_definition: $ => seq(
      kw("FUNCTION"), field("name", $.identifier), optional($.type_sigil), optional($.parameter_list), optional(kw("STATIC")), /\r?\n/,
      blockBody($),
      kw("END"), kw("FUNCTION"), /\r?\n/,
    ),

    parameter_list: $ => seq("(", commaSep1($.parameter), ")"),

    parameter: $ => seq($.identifier, optional($.type_sigil), optional(seq(kw("AS"), $.type_name))),

    type_name: $ => choice(
      kw("INTEGER"), kw("LONG"), kw("SINGLE"), kw("DOUBLE"), kw("STRING"),
      $.identifier,
    ),

    // ====== TYPE/END TYPE ======
    type_definition: $ => seq(
      kw("TYPE"), field("name", $.identifier), /\r?\n/,
      repeat($.type_member),
      kw("END"), kw("TYPE"), /\r?\n/,
    ),

    type_member: $ => seq(
      $.identifier, kw("AS"), $.type_name, /\r?\n/,
    ),

    // ====== File I/O (inherited from GW-BASIC) ======
    dim_statement: $ => seq(kw("DIM"), optional(kw("SHARED")), commaSep1($.dim_variable)),
    dim_variable: $ => choice(
      seq($.identifier, optional($.type_sigil), kw("AS"), $.type_name),
      seq($.identifier, optional($.type_sigil), "(", commaSep1($.expression), ")"),
    ),

    // CONST declaration
    const_statement: $ => seq(kw("CONST"), commaSep1(seq($.identifier, optional($.type_sigil), "=", $.expression))),

    // DECLARE SUB/FUNCTION
    declare_statement: $ => seq(
      kw("DECLARE"),
      choice(kw("SUB"), kw("FUNCTION")),
      $.identifier,
      optional($.parameter_list),
    ),

    // CALL statement
    call_statement: $ => seq(kw("CALL"), $.identifier, optional(seq("(", commaSep($.expression), ")"))),

    // STATIC statement (inside SUB/FUNCTION)
    static_statement: $ => seq(kw("STATIC"), commaSep1($.variable)),

    // SHARED statement (inside SUB/FUNCTION)
    shared_statement: $ => seq(kw("SHARED"), commaSep1($.variable)),

    // EXIT statement
    exit_statement: $ => seq(kw("EXIT"), choice(kw("FOR"), kw("DO"), kw("SUB"), kw("FUNCTION"))),

    // GOTO/GOSUB accept labels too (not just line numbers)
    goto_statement: $ => seq(kw("GOTO"), choice($.line_number, $.identifier)),
    gosub_statement: $ => seq(kw("GOSUB"), choice($.line_number, $.identifier)),

    // ====== QuickBasic-specific statements ======

    // Metacommands ($INCLUDE, $DYNAMIC, $STATIC) — higher precedence than apostrophe_comment
    metacommand: $ => token(prec(2, choice(
      seq("'", /[ \t]*/, /\$[Ii][Nn][Cc][Ll][Uu][Dd][Ee]/, /[ \t]*/, ":", /[ \t]*/, "'", /[^'\r\n]+/, "'"),
      seq("'", /[ \t]*/, /\$[Dd][Yy][Nn][Aa][Mm][Ii][Cc]/),
      seq("'", /[ \t]*/, /\$[Ss][Tt][Aa][Tt][Ii][Cc]/),
    ))),

    // REDIM [PRESERVE]
    redim_statement: $ => seq(
      kw("REDIM"), optional(kw("PRESERVE")),
      commaSep1($.dim_variable),
    ),

    // ERASE (remove dynamic arrays)
    erase_statement: $ => seq(kw("ERASE"), commaSep1($.identifier)),

    // DEFtype (DEFINT, DEFLNG, DEFSNG, DEFDBL, DEFSTR)
    deftype_statement: $ => seq(
      choice(kw("DEFINT"), kw("DEFLNG"), kw("DEFSNG"), kw("DEFDBL"), kw("DEFSTR")),
      commaSep1($.letter_range),
    ),
    letter_range: $ => seq(
      /[a-zA-Z]/,
      optional(seq("-", /[a-zA-Z]/)),
    ),

    // SLEEP
    sleep_statement: $ => seq(kw("SLEEP"), optional($.expression)),

    // SHELL
    shell_statement: $ => seq(kw("SHELL"), optional($.expression)),

    // RANDOMIZE
    randomize_statement: $ => seq(kw("RANDOMIZE"), optional(choice(kw("TIMER"), $.expression))),

    // File system operations
    kill_statement: $ => seq(kw("KILL"), $.expression),
    name_statement: $ => seq(kw("NAME"), $.expression, kw("AS"), $.expression),
    mkdir_statement: $ => seq(kw("MKDIR"), $.expression),
    rmdir_statement: $ => seq(kw("RMDIR"), $.expression),
    chdir_statement: $ => seq(kw("CHDIR"), $.expression),
    files_statement: $ => seq(kw("FILES"), optional($.expression)),

    // LOCK/UNLOCK
    lock_statement: $ => seq(
      kw("LOCK"), optional("#"), $.expression,
      optional(seq(",", $.expression, optional(seq(kw("TO"), $.expression)))),
    ),
    unlock_statement: $ => seq(
      kw("UNLOCK"), optional("#"), $.expression,
      optional(seq(",", $.expression, optional(seq(kw("TO"), $.expression)))),
    ),

    // SEEK statement
    seek_statement: $ => seq(kw("SEEK"), optional("#"), $.expression, ",", $.expression),

    // LPRINT
    lprint_statement: $ => seq(
      kw("LPRINT"),
      optional(seq(kw("USING"), $.expression, ";",)),
      optional($.print_list),
    ),

    // PRINT USING (override print for USING variant)
    print_using_statement: $ => seq(
      kw("PRINT"), kw("USING"), $.expression, ";",
      optional($.print_list),
    ),

    // OPTION BASE
    option_base_statement: $ => seq(kw("OPTION"), kw("BASE"), choice("0", "1")),

    // ON...GOTO/GOSUB with labels (extends common on_goto_statement)
    on_goto_statement: $ => seq(
      kw("ON"), $.expression,
      choice(kw("GOTO"), kw("GOSUB")),
      commaSep1(choice($.line_number, $.identifier)),
    ),

    // STRIG/PEN/COM event trapping
    strig_control_statement: $ => seq(kw("STRIG"), "(", $.expression, ")", choice(kw("ON"), kw("OFF"), kw("STOP"))),
    pen_control_statement: $ => seq(kw("PEN"), choice(kw("ON"), kw("OFF"), kw("STOP"))),
    com_control_statement: $ => seq(kw("COM"), "(", $.expression, ")", choice(kw("ON"), kw("OFF"), kw("STOP"))),

    // IOCTL
    ioctl_statement: $ => seq(kw("IOCTL"), optional("#"), $.expression, ",", $.expression),

    // ====== Statement choice ======
    statement: $ => choice(
      ...common.statementChoices.map(fn => fn($)),
      // File I/O
      $.open_statement,
      $.close_statement,
      $.get_statement,
      $.put_statement,
      $.print_file_statement,
      $.input_file_statement,
      $.line_input_file_statement,
      $.write_file_statement,
      $.field_statement,
      $.lset_statement,
      $.rset_statement,
      // Graphics
      $.screen_statement,
      $.color_statement,
      $.pset_statement,
      $.line_graph_statement,
      $.circle_statement,
      $.draw_statement,
      $.paint_statement,
      $.view_statement,
      $.window_statement,
      $.pcopy_statement,
      $.palette_statement,
      // Sound
      $.play_statement,
      $.sound_statement,
      $.beep_statement,
      // Screen/Keyboard
      $.key_statement,
      $.locate_statement,
      $.cls_statement,
      $.width_statement,
      // Memory
      $.def_seg_statement,
      $.bload_statement,
      $.bsave_statement,
      // Error handling
      $.on_error_statement,
      $.resume_statement,
      // Program chaining
      $.chain_statement,
      $.common_var_statement,
      // Event trapping
      $.on_timer_statement,
      $.on_key_statement,
      $.timer_control_statement,
      $.key_control_statement,
      // MS BASIC 2.0 extras
      $.clear_statement,
      $.cont_statement,
      $.list_statement,
      $.run_statement,
      $.write_statement,
      // QBasic-specific
      $.const_statement,
      $.declare_statement,
      $.call_statement,
      $.static_statement,
      $.shared_statement,
      $.exit_statement,
      // QuickBasic-specific
      $.redim_statement,
      $.erase_statement,
      $.deftype_statement,
      $.sleep_statement,
      $.shell_statement,
      $.randomize_statement,
      $.kill_statement,
      $.name_statement,
      $.mkdir_statement,
      $.rmdir_statement,
      $.chdir_statement,
      $.files_statement,
      $.lock_statement,
      $.unlock_statement,
      $.seek_statement,
      $.lprint_statement,
      $.print_using_statement,
      $.option_base_statement,
      $.on_strig_statement,
      $.strig_control_statement,
      $.on_pen_statement,
      $.pen_control_statement,
      $.on_com_statement,
      $.com_control_statement,
      $.ioctl_statement,
    ),

    // Override system_variable to include QBasic/QuickBasic system variables
    builtin_function: $ => choice(
      // Common builtins
      token(kw("LEFT$")), token(kw("RIGHT$")), token(kw("MID$")),
      token(kw("CHR$")), token(kw("STR$")), token(kw("STRING$")), token(kw("SPACE$")),
      token(kw("INT")), token(kw("RND")), token(kw("ASC")), token(kw("LEN")),
      token(kw("VAL")), token(kw("ABS")), token(kw("SQR")), token(kw("SIN")),
      token(kw("COS")), token(kw("TAN")), token(kw("ATN")), token(kw("LOG")),
      token(kw("EXP")), token(kw("SGN")), token(kw("PEEK")), token(kw("POS")),
      token(kw("TAB")), token(kw("SPC")), token(kw("INSTR")),
      token(kw("EOF")), token(kw("LOC")), token(kw("LOF")),
      token(kw("FRE")), token(kw("POINT")),
      // QuickBasic additions
      token(kw("LBOUND")), token(kw("UBOUND")),
      token(kw("LTRIM$")), token(kw("RTRIM$")),
      token(kw("UCASE$")), token(kw("LCASE$")),
      token(kw("ENVIRON$")),
      token(kw("SADD")), token(kw("VARPTR")), token(kw("VARSEG")), token(kw("VARPTR$")),
      token(kw("SSEG")), token(kw("SETMEM")),
      token(kw("SEEK")), token(kw("IOCTL$")),
      token(kw("CINT")), token(kw("CLNG")), token(kw("CSNG")), token(kw("CDBL")),
      token(kw("FIX")), token(kw("HEX$")), token(kw("OCT$")),
      token(kw("STICK")),
      token(kw("ERDEV")), token(kw("ERDEV$")),
    ),

    primary_expression: $ => prec(14, choice(
      ...common.primaryChoices.map(fn => fn($)),
      $.usr_call,
    )),
  },
});
