grammars/qbasic/test/corpus/error_recovery.txt
================
Error recovery after garbage line
================
@@@ GARBAGE
PRINT "OK"

---

(program
  (ERROR
    (UNEXPECTED '@'))
  (line
    (statement_list
      (statement
        (print_statement
          (print_list
            (print_item
              (expression
                (primary_expression
                  (literal
                    (string_literal)))))))))))
