grammars/qbasic/test/corpus/procedures.txt
================
SUB definition
================
SUB Hello
PRINT "Hello"
END SUB

---

(program
  (sub_definition
    name: (identifier)
    (line
      (statement_list
        (statement
          (print_statement
            (print_list
              (print_item
                (expression
                  (primary_expression
                    (literal
                      (string_literal))))))))))))

================
SUB with STATIC modifier
================
SUB Greet STATIC
PRINT "Hi"
END SUB

---

(program
  (sub_definition
    name: (identifier)
    (line
      (statement_list
        (statement
          (print_statement
            (print_list
              (print_item
                (expression
                  (primary_expression
                    (literal
                      (string_literal))))))))))))

================
SUB with parameters
================
SUB Greet (name$ AS STRING) STATIC
PRINT "Hello, "; name$
END SUB

---

(program
  (sub_definition
    name: (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_sigil)
        (type_name)))
    (line
      (statement_list
        (statement
          (print_statement
            (print_list
              (print_item
                (expression
                  (primary_expression
                    (literal
                      (string_literal)))))
              (print_item
                (expression
                  (primary_expression
                    (variable
                      (identifier)
                      (type_sigil))))))))))))

================
FUNCTION definition
================
FUNCTION Double% (n%)
Double% = n% * 2
END FUNCTION

---

(program
  (function_definition
    name: (identifier)
    (type_sigil)
    (parameter_list
      (parameter
        (identifier)
        (type_sigil)))
    (line
      (statement_list
        (statement
          (let_statement
            (variable
              (identifier)
              (type_sigil))
            (expression
              (binary_expression
                (expression
                  (primary_expression
                    (variable
                      (identifier)
                      (type_sigil))))
                (expression
                  (primary_expression
                    (literal
                      (integer_literal))))))))))))

================
DECLARE SUB
================
DECLARE SUB PrintStars (n%)

---

(program
  (line
    (statement_list
      (statement
        (declare_statement
          (identifier)
          (parameter_list
            (parameter
              (identifier)
              (type_sigil))))))))

================
CALL statement
================
CALL PrintStars(5)

---

(program
  (line
    (statement_list
      (statement
        (call_statement
          (identifier)
          (expression
            (primary_expression
              (literal
                (integer_literal)))))))))
